--- a/web/src/index.css
+++ b/web/src/index.css
@@ -8,6 +8,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 /**
  * END --- SETUP TAILWINDCSS EDIT
  */
@@ -15,19 +16,73 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
     Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
+
+h1 {
+  color: #fff;
+  font-weight: bold;
+  font-size: 36px;
+}
+
+.top-header {
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+}
+
+button {
+  background-color: #a54caf; /* Verde */
+  color: white;
+  padding: 12px 20px;
+  font-size: 16px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2); /* Sombra suave */
+  transition: all 0.3s ease-in-out;
+}
+
+button:hover {
+  background-color: #af0404; /* Verde mais escuro ao passar o mouse */
+  box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.3); /* Intensifica a sombra */
+}
+
+.top-header > .flex-between{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(50, 50, 231);
+  color: #fff;
+}
+
+.top-header > nav {
+  color: #fff;
+  background-color: rgb(8, 0, 118);
+}
+
+nav li {
+  font-weight: bold;
+}
+
+header h2 {
+  font-weight: bold;
+}
+
 ul {
   list-style-type: none;
   margin: 1rem 0;
   padding: 0;
 }
+
 li {
   display: inline-block;
   margin: 0 1rem 0 0;
 }
-h1 > a {
+
+h1>a {
   text-decoration: none;
   color: black;
 }
+
 button,
 input,
 label,
@@ -35,34 +90,42 @@ textarea {
   display: block;
   outline: none;
 }
+
 label {
   margin-top: 1rem;
 }
+
 .error {
   color: red;
 }
+
 input.error,
 textarea.error {
   border: 1px solid red;
 }
+
 .form-error {
   color: red;
   background-color: lavenderblush;
   padding: 1rem;
   display: inline-block;
 }
+
 .form-error ul {
   list-style-type: disc;
   margin: 1rem;
   padding: 1rem;
 }
+
 .form-error li {
   display: list-item;
 }
+
 .flex-between {
   display: flex;
   justify-content: space-between;
 }
+
 .flex-between button {
   display: inline;
 }
